--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Software Engineer</title>
+    <title>Carlos Consuegra | Technology & Innovation Strategist</title>
     <style>
+        /* Previous styles remain the same */
         :root {
             --navy: #0a192f;
             --light-navy: #112240;
@@ -289,7 +290,7 @@
 <body>
     <nav>
         <div class="nav-content">
-            <a href="#" class="logo">B.</a>
+            <a href="#" class="logo">CC.</a>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#work">Work</a></li>
@@ -303,8 +304,8 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>Hi, my name is</h1>
-                    <h2>Your Name.</h2>
-                    <h3>I build things for the web. I'm a software engineer specializing in building (and occasionally designing) exceptional digital experiences.</h3>
+                    <h2>Carlos Consuegra.</h2>
+                    <h3>I'm a Technology & Innovation Strategist with over 20 years of experience pioneering advancements in VR, AR, AI, and digital transformation.</h3>
                 </div>
             </div>
         </section>
@@ -314,16 +315,16 @@
                 <h2 class="numbered-heading">About Me</h2>
                 <div class="about-grid">
                     <div class="about-text">
-                        <p>Hello! My name is Your Name, and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</p>
-                        <p>Fast-forward to today, and I've had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio.</p>
-                        <p>Here are a few technologies I've been working with recently:</p>
+                        <p>I'm a visionary technology strategist with a proven record of creating mission-driven technology that not only pushes the boundaries of innovation but also delivers tangible social impact. With extensive experience leading teams, founding tech companies, and consulting for top global brands, I bring a blend of entrepreneurial expertise, strategic insight, and a dedication to "technology for good."</p>
+                        <p>As Strategic Tech Director at Made for Joy, I lead technology initiatives that align with the company's mission of fostering empathy and connection through technology. I created the "Final Mile" Production Pipeline, an agile content delivery strategy that maximizes efficiency and reach.</p>
+                        <p>Here are a few technologies I specialize in:</p>
                         <ul class="skills-list">
-                            <li>JavaScript (ES6+)</li>
-                            <li>TypeScript</li>
-                            <li>React</li>
-                            <li>Node.js</li>
-                            <li>WordPress</li>
-                            <li>Python</li>
+                            <li>Virtual Reality (VR)</li>
+                            <li>Augmented Reality (AR)</li>
+                            <li>Artificial Intelligence (AI)</li>
+                            <li>XR Integration</li>
+                            <li>Digital Transformation</li>
+                            <li>Innovation Strategy</li>
                         </ul>
                     </div>
                 </div>
@@ -337,20 +338,32 @@
                     <article class="project">
                         <div class="project-content">
                             <p class="project-overline">Featured Project</p>
-                            <h3 class="project-title">Project Title</h3>
+                            <h3 class="project-title">Oniria VR</h3>
                             <div class="project-description">
-                                <p>A descriptive paragraph about your project. What problem did it solve? What technologies did you use? What was your role?</p>
+                                <p>Co-founded Mexico's first VR company, leading the development of groundbreaking VR solutions across industries including cinema, architecture, healthcare, and marketing. Created award-winning immersive experiences and co-founded VRFest, Latin America's first VR event.</p>
                             </div>
                             <ul class="project-tech-list">
-                                <li>React</li>
-                                <li>TypeScript</li>
-                                <li>Node.js</li>
-                                <li>MongoDB</li>
+                                <li>Virtual Reality</li>
+                                <li>Healthcare</li>
+                                <li>Architecture</li>
+                                <li>Cinema</li>
                             </ul>
-                            <div class="project-links">
-                                <a href="#" target="_blank">GitHub</a>
-                                <a href="#" target="_blank">Live Demo</a>
+                        </div>
+                    </article>
+
+                    <article class="project">
+                        <div class="project-content">
+                            <p class="project-overline">Featured Project</p>
+                            <h3 class="project-title">Funktionell</h3>
+                            <div class="project-description">
+                                <p>Built a multi-disciplinary tech company renowned for its innovation-focused culture and social impact. Launched key ventures including Funkdomotics for accessible home automation and Chicle Fresco for educational VR content.</p>
                             </div>
+                            <ul class="project-tech-list">
+                                <li>Innovation</li>
+                                <li>Home Automation</li>
+                                <li>Educational VR</li>
+                                <li>Social Impact</li>
+                            </ul>
                         </div>
                     </article>
                 </div>
@@ -360,7 +373,7 @@
 
     <footer>
         <div class="container">
-            <p>Built by Your Name</p>
+            <p>Built by Carlos Consuegra</p>
         </div>
     </footer>
 </body>
