--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Consuegra | Technology & Innovation Strategist</title>
     <style>
-        /* Previous styles remain the same */
         :root {
-            --navy: #0a192f;
-            --light-navy: #112240;
-            --lightest-navy: #233554;
-            --slate: #8892b0;
-            --light-slate: #a8b2d1;
-            --lightest-slate: #ccd6f6;
-            --green: #64ffda;
+            --deep-purple: #1a1025;
+            --medium-purple: #2d1b3d;
+            --light-purple: #432c55;
+            --neon-green: #39FF14;
+            --slate: #b8b8d1;
+            --light-slate: #d8d8e8;
+            --lightest-slate: #e8e8f5;
             --font-mono: "SF Mono", "Fira Code", "Fira Mono", monospace;
             --font-sans: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, system-ui, sans-serif;
         }
@@ -25,7 +24,7 @@
         }
 
         body {
-            background-color: var(--navy);
+            background-color: var(--deep-purple);
             color: var(--slate);
             font-family: var(--font-sans);
             line-height: 1.6;
@@ -41,7 +40,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: rgba(10, 25, 47, 0.85);
+            background-color: rgba(26, 16, 37, 0.85);
             backdrop-filter: blur(10px);
             padding: 1rem 0;
             z-index: 100;
@@ -57,10 +56,11 @@
         }
 
         .logo {
-            color: var(--green);
+            color: var(--neon-green);
             font-family: var(--font-mono);
             font-size: 1.5rem;
             text-decoration: none;
+            text-shadow: 0 0 10px rgba(57, 255, 20, 0.5);
         }
 
         .nav-links {
@@ -74,10 +74,12 @@
             text-decoration: none;
             font-family: var(--font-mono);
             font-size: 0.875rem;
+            transition: color 0.2s ease;
         }
 
         .nav-links a:hover {
-            color: var(--green);
+            color: var(--neon-green);
+            text-shadow: 0 0 8px rgba(57, 255, 20, 0.5);
         }
 
         .hero {
@@ -89,14 +91,15 @@
 
         .hero-content h1 {
             font-size: clamp(40px, 8vw, 80px);
-            color: var(--lightest-slate);
+            color: var(--neon-green);
             line-height: 1.1;
             margin: 0;
+            text-shadow: 0 0 15px rgba(57, 255, 20, 0.3);
         }
 
         .hero-content h2 {
             font-size: clamp(40px, 8vw, 80px);
-            color: var(--slate);
+            color: var(--lightest-slate);
             line-height: 1.1;
             margin: 0;
         }
@@ -121,10 +124,11 @@
         .numbered-heading::before {
             content: "01.";
             margin-right: 10px;
-            color: var(--green);
+            color: var(--neon-green);
             font-family: var(--font-mono);
             font-size: clamp(16px, 3vw, 20px);
             font-weight: 400;
+            text-shadow: 0 0 8px rgba(57, 255, 20, 0.5);
         }
 
         .numbered-heading::after {
@@ -134,7 +138,7 @@
             width: 300px;
             height: 1px;
             margin-left: 20px;
-            background-color: var(--lightest-navy);
+            background-color: var(--light-purple);
         }
 
         .about {
@@ -175,9 +179,40 @@
             content: "▹";
             position: absolute;
             left: 0;
-            color: var(--green);
+            color: var(--neon-green);
             font-size: 14px;
             line-height: 12px;
+            text-shadow: 0 0 8px rgba(57, 255, 20, 0.5);
+        }
+
+        .achievements {
+            padding: 100px 0;
+        }
+
+        .achievements-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
+        }
+
+        .achievement-card {
+            background-color: var(--medium-purple);
+            padding: 2rem;
+            border-radius: 4px;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            border: 1px solid var(--light-purple);
+        }
+
+        .achievement-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0 20px rgba(57, 255, 20, 0.1);
+        }
+
+        .achievement-card h3 {
+            color: var(--neon-green);
+            margin-bottom: 1rem;
+            text-shadow: 0 0 8px rgba(57, 255, 20, 0.3);
         }
 
         .featured-projects {
@@ -206,10 +241,11 @@
 
         .project-overline {
             margin: 10px 0;
-            color: var(--green);
+            color: var(--neon-green);
             font-family: var(--font-mono);
             font-size: 13px;
             font-weight: 400;
+            text-shadow: 0 0 8px rgba(57, 255, 20, 0.3);
         }
 
         .project-title {
@@ -222,10 +258,11 @@
             position: relative;
             padding: 25px;
             border-radius: 4px;
-            background-color: var(--light-navy);
+            background-color: var(--medium-purple);
             color: var(--light-slate);
             font-size: 15px;
             z-index: 2;
+            border: 1px solid var(--light-purple);
         }
 
         .project-tech-list {
@@ -245,21 +282,38 @@
             white-space: nowrap;
         }
 
-        .project-links {
+        .contact {
+            text-align: center;
+            padding: 100px 0;
+        }
+
+        .contact p {
+            max-width: 600px;
+            margin: 0 auto 2rem;
+        }
+
+        .contact-links {
             display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            margin-top: 10px;
-            gap: 10px;
+            justify-content: center;
+            gap: 2rem;
+            margin-top: 2rem;
         }
 
-        .project-links a {
-            color: var(--light-slate);
+        .contact-links a {
+            color: var(--neon-green);
             text-decoration: none;
+            font-family: var(--font-mono);
+            font-size: 1.1rem;
+            padding: 0.5rem 1rem;
+            border: 1px solid var(--neon-green);
+            border-radius: 4px;
+            transition: all 0.2s ease;
+            text-shadow: 0 0 8px rgba(57, 255, 20, 0.3);
         }
 
-        .project-links a:hover {
-            color: var(--green);
+        .contact-links a:hover {
+            background-color: rgba(57, 255, 20, 0.1);
+            box-shadow: 0 0 15px rgba(57, 255, 20, 0.3);
         }
 
         footer {
@@ -287,7 +341,9 @@
         }
     </style>
 </head>
+<!-- Rest of the HTML content remains the same as the previous version -->
 <body>
+    <!-- Previous content remains exactly the same -->
     <nav>
         <div class="nav-content">
             <a href="#" class="logo">CC.</a>
@@ -305,67 +361,56 @@
                 <div class="hero-content">
                     <h1>Hi, my name is</h1>
                     <h2>Carlos Consuegra.</h2>
-                    <h3>I'm a Technology & Innovation Strategist with over 20 years of experience pioneering advancements in VR, AR, AI, and digital transformation.</h3>
+                    <h3>I'm a visionary Technology & Innovation Strategist with over 20 years of experience pioneering advancements in VR, AR, AI, and digital transformation across sectors such as education, healthcare, corporate training, and media.</h3>
                 </div>
             </div>
         </section>
 
-        <section id="about" class="about">
+        <section id="achievements" class="achievements">
             <div class="container">
-                <h2 class="numbered-heading">About Me</h2>
-                <div class="about-grid">
-                    <div class="about-text">
-                        <p>I'm a visionary technology strategist with a proven record of creating mission-driven technology that not only pushes the boundaries of innovation but also delivers tangible social impact. With extensive experience leading teams, founding tech companies, and consulting for top global brands, I bring a blend of entrepreneurial expertise, strategic insight, and a dedication to "technology for good."</p>
-                        <p>As Strategic Tech Director at Made for Joy, I lead technology initiatives that align with the company's mission of fostering empathy and connection through technology. I created the "Final Mile" Production Pipeline, an agile content delivery strategy that maximizes efficiency and reach.</p>
-                        <p>Here are a few technologies I specialize in:</p>
+                <h2 class="numbered-heading">Key Achievements</h2>
+                <div class="achievements-grid">
+                    <div class="achievement-card">
+                        <h3>Strategic Tech Leadership</h3>
+                        <p>As Strategic Tech Director at Made for Joy, created the "Final Mile" Production Pipeline, revolutionizing content delivery across VR, AR, and WebXR platforms. Led strategic technology roadmaps and innovative user experiences.</p>
+                    </div>
+                    <div class="achievement-card">
+                        <h3>Entrepreneurial Innovation</h3>
+                        <p>Co-founded and directed Funktionell for 15 years, building a multi-disciplinary tech company that became a formative place for over 50 tech professionals, emphasizing ethical work practices and technical excellence.</p>
+                    </div>
+                    <div class="achievement-card">
+                        <h3>Pioneering VR Development</h3>
+                        <p>Co-founded Oniria VR, Mexico's first VR company, creating award-winning immersive experiences and co-founding VRFest, Latin America's first VR event.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="consulting" class="achievements">
+            <div class="container">
+                <h2 class="numbered-heading">Consulting & Advisory</h2>
+                <div class="about-text">
+                    <p>Known for my Adaptive Onboarding approach, I provide comprehensive support from initial setup through hands-on training and strategic alignment. My consulting work focuses on XR and AI onboarding, digital transformation, and innovation strategies that align seamlessly with client goals.</p>
+                    <div class="client-list">
+                        <p>Notable Clients:</p>
                         <ul class="skills-list">
-                            <li>Virtual Reality (VR)</li>
-                            <li>Augmented Reality (AR)</li>
-                            <li>Artificial Intelligence (AI)</li>
-                            <li>XR Integration</li>
-                            <li>Digital Transformation</li>
-                            <li>Innovation Strategy</li>
+                            <li>Mercedes-Benz</li>
+                            <li>UNICEF</li>
+                            <li>Bank of America</li>
+                            <li>20th Century Fox</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="work" class="featured-projects">
+        <section id="contact" class="contact">
             <div class="container">
-                <h2 class="numbered-heading">Some Things I've Built</h2>
-                <div class="project-grid">
-                    <article class="project">
-                        <div class="project-content">
-                            <p class="project-overline">Featured Project</p>
-                            <h3 class="project-title">Oniria VR</h3>
-                            <div class="project-description">
-                                <p>Co-founded Mexico's first VR company, leading the development of groundbreaking VR solutions across industries including cinema, architecture, healthcare, and marketing. Created award-winning immersive experiences and co-founded VRFest, Latin America's first VR event.</p>
-                            </div>
-                            <ul class="project-tech-list">
-                                <li>Virtual Reality</li>
-                                <li>Healthcare</li>
-                                <li>Architecture</li>
-                                <li>Cinema</li>
-                            </ul>
-                        </div>
-                    </article>
-
-                    <article class="project">
-                        <div class="project-content">
-                            <p class="project-overline">Featured Project</p>
-                            <h3 class="project-title">Funktionell</h3>
-                            <div class="project-description">
-                                <p>Built a multi-disciplinary tech company renowned for its innovation-focused culture and social impact. Launched key ventures including Funkdomotics for accessible home automation and Chicle Fresco for educational VR content.</p>
-                            </div>
-                            <ul class="project-tech-list">
-                                <li>Innovation</li>
-                                <li>Home Automation</li>
-                                <li>Educational VR</li>
-                                <li>Social Impact</li>
-                            </ul>
-                        </div>
-                    </article>
+                <h2 class="numbered-heading">Get In Touch</h2>
+                <p>I'm always interested in hearing about new projects, speaking opportunities, or consulting engagements that align with my mission of creating technology for good.</p>
+                <div class="contact-links">
+                    <a href="mailto:carlos@consuegra.tech">carlos@consuegra.tech</a>
+                    <a href="https://www.linkedin.com/in/carlosconsuegra" target="_blank">LinkedIn</a>
                 </div>
             </div>
         </section>
@@ -373,7 +418,7 @@
 
     <footer>
         <div class="container">
-            <p>Built by Carlos Consuegra</p>
+            <p>Designed & Built by Carlos Consuegra</p>
         </div>
     </footer>
 </body>
