Update spacing About me

--- a/index.html
+++ b/index.html
@@ -568,14 +568,15 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="parallax-content">
-                <p>Technology is evolving at an unprecedented pace, and businesses that embrace XR, AI, and automation will shape the future. I help companies not just keep up—but lead.</p>
-                
-                <p>I'm Carlos Consuegra, a technologist, entrepreneur, and strategist with a passion for bridging the gap between cutting-edge innovation and real-world business success. With a background in immersive technologies and AI, I've spent the last four years creating transformational experiences in XR, automation, and digital strategy.</p>
+                <p style="margin-bottom: 2rem;"><strong>Technology is evolving at an unprecedented pace, and businesses that embrace XR, AI, and automation will shape the future. I help companies not just keep up—but lead.</strong></p>
 
-                <h3>Technology for Good</h3>
-                <p>I believe that technology has the power to create better societies and empower human flourishing. By leveraging XR, AI, and automation, we can build solutions that improve education, enhance well-being, and promote inclusivity. My work focuses on ensuring that emerging technologies serve a greater purpose—enabling people, organizations, and communities to thrive in an increasingly digital world.</p>
+                <p style="margin-bottom: 2rem;">I'm Carlos Consuegra, a <strong>technologist, entrepreneur, and strategist</strong> with a passion for bridging the gap between cutting-edge innovation and real-world business success. With a background in immersive technologies and AI, I've spent the last four years creating transformational experiences in XR, automation, and digital strategy.</p>
 
-                <p>Today, I focus on helping businesses unlock the power of AI and immersive technology through two main roles:</p>
+                <h3 style="margin: 2rem 0;"><strong>Technology for Good</strong></h3>
+
+                <p style="margin-bottom: 2rem;">I believe that <strong>technology has the power to create better societies and empower human flourishing</strong>. By leveraging XR, AI, and automation, we can build solutions that <strong>improve education, enhance well-being, and promote inclusivity</strong>. My work focuses on ensuring that emerging technologies serve a greater purpose—<strong>enabling people, organizations, and communities to thrive in an increasingly digital world.</strong></p>
+
+                 <p style="margin-bottom: 2rem;">Today, I focus on helping businesses unlock the power of AI and immersive technology, whether through:</p>
 
                 <div class="cards-grid">
                     <div class="card">
