Speaking Engagements Button cta

--- a/index.html
+++ b/index.html
@@ -816,7 +816,10 @@
 
             <div style="text-align: center; margin-top: 2rem;">
                 <p>💡 <em>Interested in having me speak at your event?</em> Let's talk! 📩</p>
-                <a href="#contact" class="hero-cta" style="margin-top: 1.5rem;">Get in Touch</a>
+                <a href="#contact" class="services-cta" style="margin-top: 1.5rem;">
+                    <span class="icon">✉️</span>
+                    <span class="text">Get in Touch</span>
+                </a>
             </div>
         </div>
     </div>
