--- a/index_d.html
+++ b/index_d.html
@@ -545,7 +545,7 @@
                     <li><a href="#about-carlos" class="nav-link">About</a></li>
                     <li><a href="#experience" class="nav-link">How I Work</a></li>
                     <li><a href="#selected-works" class="nav-link">Selected Works</a></li>
-                    <li><a href="/portfolio" class="nav-link">Portfolio</a></li>
+                    <li><a href="/portafolio.html" class="nav-link">Portfolio</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </div>
@@ -739,7 +739,7 @@
                     <div style="text-align: center; margin-top: 4rem; padding: 2rem; background: rgba(57, 255, 20, 0.05); border-radius: 8px; border: 1px solid rgba(57, 255, 20, 0.1);">
                         <h3 style="color: var(--neon-green); margin-bottom: 1.5rem;">💼 Ready to see more?</h3>
                         <p style="margin-bottom: 2rem;">Explore the complete portfolio with detailed case studies, process documentation, and visual galleries showcasing the full scope of delivered projects.</p>
-                        <a href="/portfolio" class="hero-cta" style="display: inline-block; padding: 1rem 2rem; border: 1px solid var(--neon-green); color: var(--neon-green); font-family: var(--font-mono); text-decoration: none; transition: var(--transition); border-radius: 4px; margin-right: 1rem;">View Full Portfolio</a>
+                        <a href="portafolio.html" class="hero-cta" style="display: inline-block; padding: 1rem 2rem; border: 1px solid var(--neon-green); color: var(--neon-green); font-family: var(--font-mono); text-decoration: none; transition: var(--transition); border-radius: 4px; margin-right: 1rem;">View Full Portfolio</a>
                         <a href="#contact" class="hero-cta" style="display: inline-block; padding: 1rem 2rem; border: 1px solid var(--neon-green); color: var(--neon-green); font-family: var(--font-mono); text-decoration: none; transition: var(--transition); border-radius: 4px; background: rgba(57, 255, 20, 0.1);">Discuss Your Project</a>
                     </div>
                 </div>
@@ -854,7 +854,7 @@
                         <li style="margin-bottom: 0.5rem;"><a href="#about-carlos" style="color: var(--light-slate); text-decoration: none; font-size: 0.9rem; transition: var(--transition);">About</a></li>
                         <li style="margin-bottom: 0.5rem;"><a href="#experience" style="color: var(--light-slate); text-decoration: none; font-size: 0.9rem; transition: var(--transition);">How I Work</a></li>
                         <li style="margin-bottom: 0.5rem;"><a href="#selected-works" style="color: var(--light-slate); text-decoration: none; font-size: 0.9rem; transition: var(--transition);">Selected Works</a></li>
-                        <li style="margin-bottom: 0.5rem;"><a href="/portfolio" style="color: var(--light-slate); text-decoration: none; font-size: 0.9rem; transition: var(--transition);">Portfolio</a></li>
+                        <li style="margin-bottom: 0.5rem;"><a href="/portafolio.html" style="color: var(--light-slate); text-decoration: none; font-size: 0.9rem; transition: var(--transition);">Portfolio</a></li>
                     </ul>
                 </div>
                 
